Replace deprecated Number object constructors with valueOf
valueOf is the recommended replacement