@@ -72,7 +72,7 @@ public class DefineTable {
 
 		while (findTable != null && pos < buf.length()) {
 			char ch = buf.charAt(pos++);
-			Character chObj = new Character(ch);
+			Character chObj = Character.valueOf(ch);
 
 			findTable = (Hashtable) findTable.get(chObj);
 
@@ -104,7 +104,7 @@ public class DefineTable {
 		int len = string.length();
 		while (pos < len) {
 			char ch = string.charAt(pos++);
-			chObj = new Character(ch);
+			chObj = Character.valueOf(ch);
 
 			Hashtable node = (Hashtable) findTable.get(chObj);
 
@@ -166,7 +166,7 @@ public class DefineTable {
 		int len = string.length();
 		while (pos < len) {
 			char ch = string.charAt(pos++);
-			chObj = new Character(ch);
+			chObj = Character.valueOf(ch);
 
 			findTable = (Hashtable) findTable.get(chObj);
 
@@ -497,7 +497,7 @@ public class DefineTable {
 					continue;
 				}
 
-				Integer begin = new Integer(curpos);
+				Integer begin = Integer.valueOf(curpos);
 				int insertLoc = 0;
 				for (; insertLoc < beginPos.size(); insertLoc++) {
 					Integer loc = beginPos.get(insertLoc);
@@ -507,7 +507,7 @@ public class DefineTable {
 				}
 
 				beginPos.add(insertLoc, begin);
-				endPos.add(insertLoc, new Integer(curpos + curArgName.length()));
+				endPos.add(insertLoc, Integer.valueOf(curpos + curArgName.length()));
 				subValue.add(insertLoc, argValue);
 			}
 			while (curpos >= 0);
